--- a/css.html
+++ b/css.html
@@ -2,7 +2,7 @@
 	<h1><b>CASCADING STYLE SHEETS</b></h1>
 </center>
 <center>
-	<img src="html.png" height="100" width="100">
+	<img src="css.png" height="100" width="100">
 </center>
 <blockquote><h3><i>Cascading Style Sheets (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS describes how elements should be rendered on screen, on paper, in speech, or on other media.</i></h3></blockquote>
 
